--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@
   opacity: 0.7;
 }
 
+.popUpText {
+  background-color: white;
+  padding: 5px;
+  border-radius: 5px;
+  text-align: center;
+}
+
 /* The Modal (background) */
 .fullScreenModal {
   display: none; /* Hidden by default */
@@ -24,8 +31,8 @@
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
-  width: 100vw; /* Full width */
-  height: 100vh; /* Full height */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: contain;
