--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,15 @@
   text-align: center;
 }
 
+@keyframes animatedBackground {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* The Modal (background) */
 .fullScreenModal {
   display: none; /* Hidden by default */
@@ -39,6 +48,7 @@
   background-color: black;
   z-index: 99997;
   background-position: center center; 
+  animation: animatedBackground 3s ease-in-out;
 
   &__caption {
     background-image: -moz-linear-gradient(bottom, rgba(16,16,16,0.75), rgba(16,16,16,0.25) 80%, rgba(16,16,16,0));
@@ -76,14 +86,6 @@
 
 .fullScreen {
   display: block !important;
-}
-
-/* Add Animation */
-.fullScreenModal-content, #caption {  
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-name: zoom;
-  animation-duration: 0.6s;
 }
 
 @-webkit-keyframes zoom {
