--- a/src/leaflet.css
+++ b/src/leaflet.css
@@ -473,6 +473,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	position: absolute;
 	text-align: center;
 	margin-bottom: 20px;
+	left: 0 !important;
 	}
 .leaflet-popup-content {
     width: 100%;
