--- a/src/App.scss
+++ b/src/App.scss
@@ -78,8 +78,39 @@
     cursor: pointer;
   }
 
+  &__nav-next,
+	&__nav-previous {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    top: 50%;
+    width: 6em;
+    height: 6em;
+    margin-top: -3em;
+    background-image: url("./images/arrow.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+  }
+
+  &__nav-previous {
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
+    transform: scaleX(-1);
+    left: 0;
+  }
+
+  &__nav-next {
+    right: 0;
+  }
+
   &__close:hover,
-  &__close:focus {
+  &__close:focus,
+  &__nav-next:hover,
+	&__nav-previous:hover,
+  &__nav-next:focus,
+	&__nav-previous:focus {
     opacity: 0.7;
   }
 }
@@ -105,7 +136,15 @@
     width: 100%;
   }
 
-  .fullScreenModal__caption {
-    font-size: small !important;
+  .fullScreenModal {
+    &__caption {
+      font-size: small !important;
+    }
+
+    &__nav-next,
+	  &__nav-previous {
+      background-image: url("./images/arrow-small.svg");
+    }
   }
+
 }
